Add the web server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -472,7 +472,7 @@ if(NOCT2D_TARGET_MACOS AND NOCT2D_ENABLE_BUNDLE)
   )
 
   # Copy the assets.pak file.
-  set(APP_GAME_DATA "${CMAKE_CURRENT_SOURCE_DIR}/resources/assets.pak.")
+  set(APP_GAME_DATA "${CMAKE_CURRENT_SOURCE_DIR}/resources/assets.pak")
   set_source_files_properties(${APP_GAME_DATA} PROPERTIES
     MACOSX_PACKAGE_LOCATION "Resources"
   )
