--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
-site_name: NoctVM Game Engine Docs
-repo_url: https://github.com/awemorris/NoctVM.git
+site_name: PicoPicoScript Docs
+repo_url: https://github.com/awemorris/PicoPicoScript
 use_directory_urls: false
 
 nav:
   - Home: index.md
   - Getting Started: gettingstarted.md
-  - PicoPico Script Syntax: syntax.md
-  - PicoPico Script API: api.md
+  - PicoPicoScript Syntax: syntax.md
+  - PicoPicoScript API: api.md
   - How To Build: build.md
   - Porting: porting.md
   - Design: design.md
