--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -207,7 +207,7 @@ jobs:
           name: PicoPicoScript.zip
           path: dist/PicoPicoScript.zip
 
-      - naame: Create GitHub Release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: nightly-${{ github.run_number }}
