--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-macos:
+  release:
     runs-on: macos-latest
     steps:
       - name: Checkout repository
