--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up dependencies
         run: |
+          git submodule update --init
+
           brew update
           brew install mingw-w64 bison flex mkdocs-material
           echo "/opt/homebrew/opt/bison/bin" >> $GITHUB_PATH
