--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,10 @@ jobs:
           p12-password: ${{ secrets.CERTIFICATE_PASSWORD }}
 
       - name: Build for macOS
+        env: |
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          TEAM_ID: ${{ secrets.TEAM_ID }}
+          APP_SECRET: ${{ secrets.APP_PASSWORD }}
         run: |
           cmake --preset macos
           cmake --build --preset macos
@@ -64,7 +68,7 @@ jobs:
           codesign --timestamp --options runtime --entitlements ../resources/macos/macos.entitlements --deep --force --sign "Developer ID Application" PicoPico.app
           ditto -c -k --sequesterRsrc --keepParent PicoPico.app PicoPico.zip
           source ../.credential
-          xcrun notarytool submit PicoPico.zip --apple-id "${{ secrets.APPLE_ID }}" --team-id "${{ secrets.TEAM_ID }}" --password "${{ secrets.APP_PASSWORD }}" --wait
+          xcrun notarytool submit PicoPico.zip --apple-id "$APPLE_ID" --team-id "$TEAM_ID" --password "$APP_SECRET" --wait
           xcrun stapler staple PicoPico.app
           mkdir tmp
           cp -Rv PicoPico.app tmp/PicoPico.app
