--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,11 +55,17 @@ jobs:
         with:
           p12-file-base64: ${{ secrets.CERTIFICATE_FILE_BASE64 }}
           p12-password: ${{ secrets.CERTIFICATE_PASSWORD }}
+
+      - name: Build for macOS
+        shell: zsh
+        env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           TEAM_ID: ${{ secrets.TEAM_ID }}
           APP_SECRET: ${{ secrets.APP_PASSWORD }}
         run: |
+          echo "AAAAAAAAAAAA"
           cmake --preset macos
+          echo "BBBBBBBBBBBB"
           cmake --build --preset macos
           cd build-macos
           codesign --timestamp --options runtime --entitlements ../resources/macos/macos.entitlements --deep --force --sign "Developer ID Application" PicoPico.app
