--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,19 +67,18 @@ jobs:
           cmake --preset macos
           echo "BBBBBBBBBBBB"
           cmake --build --preset macos
-          cd build-macos
-          codesign --timestamp --options runtime --entitlements ../resources/macos/macos.entitlements --deep --force --sign "Developer ID Application" PicoPico.app
-          ditto -c -k --sequesterRsrc --keepParent PicoPico.app PicoPico.zip
-          source ../.credential
-          xcrun notarytool submit PicoPico.zip --apple-id "$APPLE_ID" --team-id "$TEAM_ID" --password "$APP_SECRET" --wait
-          xcrun stapler staple PicoPico.app
-          mkdir tmp
-          cp -Rv PicoPico.app tmp/PicoPico.app
-          hdiutil create -fs HFS+ -format UDBZ -srcfolder tmp -volname PicoPico PicoPico.dmg
-          codesign --sign "Developer ID Application" PicoPico.dmg
-          cd ..
-          cp build-macos/PicoPico.dmg dist/macos/
-          cp build-macos/picopico-pack dist/macos/
+          echo cd build-macos
+          echo codesign --timestamp --options runtime --entitlements ../resources/macos/macos.entitlements --deep --force --sign "Developer ID Application" PicoPico.app
+          echo ditto -c -k --sequesterRsrc --keepParent PicoPico.app PicoPico.zip
+          echo xcrun notarytool submit PicoPico.zip --apple-id "$APPLE_ID" --team-id "$TEAM_ID" --password "$APP_SECRET" --wait
+          echo xcrun stapler staple PicoPico.app
+          echo mkdir tmp
+          echo cp -Rv PicoPico.app tmp/PicoPico.app
+          echo hdiutil create -fs HFS+ -format UDBZ -srcfolder tmp -volname PicoPico PicoPico.dmg
+          echo codesign --sign "Developer ID Application" PicoPico.dmg
+          echo cd ..
+          echo cp build-macos/PicoPico.dmg dist/macos/
+          echo cp build-macos/picopico-pack dist/macos/
 
       - name: Build for Wasm
         run: |
