--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,13 +72,13 @@ jobs:
           ditto -c -k --sequesterRsrc --keepParent PicoPico.app PicoPico.zip
           xcrun notarytool submit PicoPico.zip --apple-id "$APPLE_ID" --team-id "$TEAM_ID" --password "$APP_SECRET" --wait
           xcrun stapler staple PicoPico.app
-          echo mkdir tmp
-          echo cp -Rv PicoPico.app tmp/PicoPico.app
-          echo hdiutil create -fs HFS+ -format UDBZ -srcfolder tmp -volname PicoPico PicoPico.dmg
-          echo codesign --sign "Developer ID Application" PicoPico.dmg
-          echo cd ..
-          echo cp build-macos/PicoPico.dmg dist/macos/
-          echo cp build-macos/picopico-pack dist/macos/
+          mkdir tmp
+          cp -Rv PicoPico.app tmp/PicoPico.app
+          hdiutil create -fs HFS+ -format UDBZ -srcfolder tmp -volname PicoPico PicoPico.dmg
+          codesign --sign "Developer ID Application" PicoPico.dmg
+          cd ..
+          cp build-macos/PicoPico.dmg dist/macos/
+          cp build-macos/picopico-pack dist/macos/
 
       - name: Build for Wasm
         run: |
