--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,10 +75,10 @@ jobs:
           mkdir tmp
           cp -Rv PicoPico.app tmp/PicoPico.app
           hdiutil create -fs HFS+ -format UDBZ -srcfolder tmp -volname PicoPico PicoPico.dmg
-          codesign --sign "Developer ID Application" PicoPico.dmg
-          cd ..
-          cp build-macos/PicoPico.dmg dist/macos/
-          cp build-macos/picopico-pack dist/macos/
+          echo codesign --sign "Developer ID Application" PicoPico.dmg
+          echo cd ..
+          echo cp build-macos/PicoPico.dmg dist/macos/
+          echo cp build-macos/picopico-pack dist/macos/
 
       - name: Build for Wasm
         run: |
